# dog

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  shell.nix
.github/workflows/: rust.yml
completions/: README.md  dog.fish  dog.ps1  dog.zsh
dns/: Cargo.toml
dns-transport/: Cargo.toml
dns-transport/src/: auto.rs  error.rs  https.rs  lib.rs  tcp.rs  tls.rs  tls_stream.rs  udp.rs
dns/src/: lib.rs  strings.rs  types.rs  wire.rs
dns/src/record/: a.rs  aaaa.rs  caa.rs  cname.rs  eui48.rs  eui64.rs  hinfo.rs  loc.rs  mod.rs  mx.rs  naptr.rs  ns.rs  openpgpkey.rs  opt.rs  others.rs  ptr.rs  soa.rs  srv.rs  sshfp.rs  tlsa.rs  txt.rs  uri.rs
dns/tests/: wire_building_tests.rs  wire_parsing_tests.rs
man/: dog.1.md
src/: colours.rs  connect.rs  hints.rs  logger.rs  main.rs  options.rs  output.rs  requests.rs  resolve.rs  table.rs  txid.rs  usage.txt
xtests/: run.sh
xtests/options/: errors.toml  help.toml
xtests/options/outputs/: invalid-argument.txt  invalid-query-class.txt  missing-parameter.txt
