[package]
name = "dog"
description = "A command-line DNS client"
authors = ["Benjamin Sago <ogham@bsago.me>"]
categories = ["command-line-utilities"]
edition = "2024"
exclude = [
    "/completions/*", "/man/*", "/xtests/*",
    "/dog-screenshot.png", "/Justfile", "/README.md",
]
homepage = "https://dns.lookup.dog/"
license = "EUPL-1.2"
version = "0.2.1"

[[bin]]
name = "dog"
path = "src/main.rs"
doctest = false

[workspace]
members = [
  "dns",
  "dns-transport",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"

[dependencies]

# dns stuff
dns = { path = "./dns" }
dns-transport = { path = "./dns-transport" }

# command-line
owo-colors = "4.2"
is-terminal = "0.4"
clap = { version = "4.5", features = ["derive", "string"] }
clap_complete = "4.5"

# transaction ID generation
rand = "0.9"

# json output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging
log = "0.4"

# windows default nameserver determination
[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.3" }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["with_idna", "with_tls", "with_https", "with_rustls"]
with_idna = ["dns/with_idna"]
with_tls = ["dns-transport/with_tls"]
with_https = ["dns-transport/with_https"]
with_nativetls = ["dns-transport/with_nativetls"]
with_nativetls_vendored = ["with_nativetls", "dns-transport/with_nativetls", "dns-transport/with_nativetls_vendored"]
with_rustls = ["dns-transport/with_rustls"]
