[package]
name = "dns-transport"
version = "0.2.1"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2024"

[lib]
doctest = false
test = false

[dependencies]

# dns wire protocol
dns = { path = "../dns" }

# logging
log = "0.4"

# tls networking
native-tls = { version = "0.2", optional = true }

# http response parsing
httparse = { version = "1.10", optional = true }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "1.0", optional = true }
cfg-if = "1"

[features]
default = []  # these are enabled in the main dog crate

with_tls   = []
with_https = ["httparse"]
with_nativetls = ["native-tls"]
with_nativetls_vendored = ["native-tls", "native-tls/vendored"]
with_rustls = ["rustls", "rustls-native-certs", "webpki-roots"]
