[package]
name = "dns"
version = "0.2.1"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2024"

[lib]
doctest = false


[dependencies]

# logging
log = "0.4"

# protocol parsing helper
byteorder = "1.5"

# printing of certain packets
base64 = "0.22"

# idna encoding
idna = { version = "1.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []  # idna is enabled in the main dog crate
with_idna = ["idna"]
